--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,11 @@ dependencies {
     implementation 'org.litepal.android:core:1.3.2'
     implementation 'com.squareup.okhttp3:okhttp:3.4.1'
     implementation 'com.google.code.gson:gson:2.7'
-    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation ("com.github.bumptech.glide:glide:4.6.1") {
+        exclude group: "com.android.support"
+    }
+    implementation "com.android.support:support-fragment:26.1.0"
+
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
